--- a/web/portal/css/tvcultura/sites/qss.css
+++ b/web/portal/css/tvcultura/sites/qss.css
@@ -19,7 +19,7 @@ body {background: black;}
 #capa-site .redes {position: relative;bottom: 40px;left: 97px;}
 #capa-site .redes .curtir {width: 218px;float: left;margin-left: 0;text-align: left;}
 #capa-site label,
-#capa-site p{font-size:20px; color:#FFFFFF; font-family:'source_sans_proregular', Arial, Helvetica, sans-serif; text-align:left; margin:20px 0 0 0;}
+#capa-site p{font-size:20px; line-height:26px; color:#FFFFFF; font-family:'source_sans_proregular', Arial, Helvetica, sans-serif; text-align:left; margin:20px 0 0 0;}
 #capa-site p { float:left; }
 #enviar{cursor: pointer;background: red;border: none;padding: 6px;float: left;font-size: 14px;color: #FFF;margin: 10px}
 #email{float: left;margin: 10px 0 200px 0px;padding: 4px;width: 621px;}
@@ -46,5 +46,5 @@ h1,
 .regulamento button { float: right;    margin: 2%;   }
 .span6.concordo input { width:15px !important; margin-right:5px; }
 #ytdContainer-2001 iframe { background:#fbfbfb; margin:20px 0 50px 0; }
-#form-contato fieldset { border: 1px solid #fff; padding:20px; }
+#form-contato fieldset { border: 1px solid #fff; padding:20px; clear:both; }
 
