--- a/web/portal/css/tvcultura/sites/qss.css
+++ b/web/portal/css/tvcultura/sites/qss.css
@@ -44,7 +44,7 @@ h1,
 #form-contato textarea { margin-top:5px; }
 .regulamento textarea { width:930px; height: 600px; margin-top:20px; padding:20px; color: #fff; background:#000; line-height:22px; font-size:14px; }
 .regulamento button { float: right;    margin: 2%;   }
-.span6.concordo input { width:15px !important; margin-right:5px; }
+.concordo input { width:15px !important; margin-right:5px; }
 #ytdContainer-2001 iframe { background:#fbfbfb; margin:20px 0 50px 0; }
 #form-contato fieldset { border: 1px solid #fff; padding:20px; clear:both; margin-bottom:20px; }
 
