--- a/web/portal/css/tvcultura/sites/qss.css
+++ b/web/portal/css/tvcultura/sites/qss.css
@@ -18,9 +18,10 @@ body {background: black;}
 #capa-site .logo{*position: absolute;*top: 62px; *left:0px;}
 #capa-site .redes {position: relative;bottom: 40px;left: 97px;}
 #capa-site .redes .curtir {width: 218px;float: left;margin-left: 0;text-align: left;}
+#form-contato legend,
 .concordo a,
 #capa-site label,
-#capa-site p{font-size:20px; line-height:26px; color:#FFFFFF; font-family:'source_sans_proregular', Arial, Helvetica, sans-serif; text-align:left; margin:20px 0 0 0;}
+#capa-site p{font-size:20px; line-height:26px; color:#FFFFFF; font-family:'source_sans_proregular', Arial, Helvetica, sans-serif; text-align:left; margin-bottom:20px;}
 #capa-site p { float:left; }
 #enviar{cursor: pointer;background: red;border: none;padding: 6px;float: left;font-size: 14px;color: #FFF;margin: 10px}
 #email{float: left;margin: 10px 0 200px 0px;padding: 4px;width: 621px;}
