--- a/web/portal/css/tvcultura/sites/qss.css
+++ b/web/portal/css/tvcultura/sites/qss.css
@@ -49,4 +49,5 @@ h1,
 .concordo input { width:15px !important; margin-right:5px; }
 #ytdContainer-2001 iframe { background:#fbfbfb; margin:20px 0 50px 0; }
 #form-contato fieldset { border: 1px solid #fff; padding:20px; clear:both; margin-bottom:20px; }
+.concordo a { text-decoration:none; }
 
