--- a/web/portal/css/tvcultura/sites/qss.css
+++ b/web/portal/css/tvcultura/sites/qss.css
@@ -53,3 +53,4 @@ h1,
 #form-contato legend,
 #form-contato legend h1 { margin-bottom:0; }
 #form-contato legend { overflow:hidden; }
+.btn-home { float:none; width:200px; margin:0 auto; font-weight: bold; }
