--- a/web/portal/css/tvcultura/sites/qss.css
+++ b/web/portal/css/tvcultura/sites/qss.css
@@ -54,3 +54,4 @@ h1,
 #form-contato legend h1 { margin-bottom:0; }
 #form-contato legend { overflow:hidden; }
 .btn-home { float:none; width:200px; margin:0 auto; font-weight: bold; }
+.btn-home:hover { text-decoration:none; }
