--- a/web/portal/css/tvcultura/sites/qss.css
+++ b/web/portal/css/tvcultura/sites/qss.css
@@ -29,7 +29,8 @@ label.error{position: absolute;bottom: -10px;color: red;}
 #capa-site label { display:block; float: left; margin-right:20px; }
 #capa-site label input { width:100%; margin-top:2px;  }
 #form-contato { float:left; margin-bottom:50px; width: 800px; }
-#enviar {clear: both;    float: right;    margin: 2%; }
+/*#enviar {clear: both;    float: right;    margin: 2%; }*/
+#enviar{float: right;margin: 0 auto;font-size: 20px;line-height: 26px;color: #FFFFFF;font-family: 'source_sans_proregular', Arial, Helvetica, sans-serif;text-align: center;margin-bottom: 20px;}
 .span8 { width: 97% }
 .span6 { width: 72% }
 .span4 { width: 47% }
