--- a/web/portal/css/tvcultura/sites/qss.css
+++ b/web/portal/css/tvcultura/sites/qss.css
@@ -31,6 +31,7 @@ label.error{position: absolute;bottom: -10px;color: red;}
 #form-contato { float:left; margin-bottom:50px; width: 800px; }
 /*#enviar {clear: both;    float: right;    margin: 2%; }*/
 #enviar{float: right;margin: 0 auto;font-size: 20px;line-height: 26px;color: #FFFFFF;font-family: 'source_sans_proregular', Arial, Helvetica, sans-serif;text-align: center;margin-bottom: 20px;}
+#enviar:hover{text-decoration:none;}
 .span8 { width: 97% }
 .span6 { width: 72% }
 .span4 { width: 47% }
