--- a/web/portal/css/geral.css
+++ b/web/portal/css/geral.css
@@ -826,7 +826,7 @@ body {background:#fff url(../images/bg-tudo3a.jpg) repeat-x;}
 /******** /BOX PADRAO ********/
 
 /**** publicidade ****/
-.box-publicidade { width:300px; height:250px; overflow:hidden; border:5px solid #ccc;  }
+.box-publicidade { width:300px; height:250px; overflow:hidden; border:5px solid #ccc; margin-top: 20px; }
 .pub-grd { width:728px; height:90px; margin-left:116px; margin-top:20px; }
 .pub-grd { _margin-left:60px; }
 /**** /publicidade ****/
