--- a/web/portal/css/tvcultura/sites/segundatela/index.css
+++ b/web/portal/css/tvcultura/sites/segundatela/index.css
@@ -6,6 +6,7 @@ ul.nav{margin-left: 23%!important;}
 .bgtopo2{background:url(/portal/images/capaPrograma/segundatela/index/bg-segundatela.png) repeat-x;}
 .bgtopo3{background:url(/portal/images/capaPrograma/segundatela/index/bg-segundatela2.png) repeat-x; position:absolute;top:0; width:100%; height:154px;right:100%;}
 .container{max-width:980px;margin:0 auto;position:relative;}
+.hero-unit .redes{width:100%;}
 .hero-unit{background:none;min-height: 155px; overflow: hidden;}
 .hero-unit .col-esq h1 {font-size: 22px;line-height: 24px;text-transform: uppercase;margin: 34px 0 0 0;padding: 0;text-indent: 0px; font-family:'source_sans_proregular'; color:#ff6833; text-align:left;}
 .hero-unit .col-esq p {margin: 10px 0; color:#FFF; text-align:left; font-size:13px; font-family:'source_sans_proregular';}
