--- a/web/portal/css/tvcultura/responsivo.css
+++ b/web/portal/css/tvcultura/responsivo.css
@@ -69,3 +69,6 @@
  #footer .span2 { width:33%;  } 
 }
 /* rodape*/
+
+.navbar.navbar-fixed-top .container { width:531px; }
+.navbar.navbar-fixed-top .container .nav { margin-left:0 !important; }
