--- a/web/portal/css/tvcultura/responsivo.css
+++ b/web/portal/css/tvcultura/responsivo.css
@@ -68,7 +68,7 @@
 
 @media screen and (max-width: 768px){
  .navbar.navbar-fixed-top .container { width:100%; }
- .nav-collapse{width: 174px;margin: 0 auto;}
+ .nav-collapse{width: 174px;margin: 0 auto !important;}
  .navbar-inverse .nav > li > a {float:left;} 
  #footer .span2 { width:33%;  } 
 }
