--- a/web/portal/css/tvcultura/sites/segundatela/index.css
+++ b/web/portal/css/tvcultura/sites/segundatela/index.css
@@ -12,7 +12,9 @@ ul.nav{margin-left: 23%!important;}
 .hero-unit .col-esq p {margin: 10px 0; color:#FFF; text-align:left; font-size:13px; font-family:'source_sans_proregular';}
 .hero-unit .bgtopo { width: 221px; height:156px; background:url(/portal/images/capaPrograma/segundatela/index/segundaTelaLogo.jpg) no-repeat; float:left; margin-right:10px;}
 .item{ padding:5px; background-color:#e1e1e1;border:1px solid white;}
-.item:hover{border:1px solid #ff6833;}
+.item.jornal:hover{border:1px solid #ff6833;}
+.item.roda:hover{border:1px solid #efe823;}
+.item.cartao:hover{border:1px solid #168c1c;}
 .item p{text-align: left;padding-top:10px;margin-bottom:0px;font-family:'source_sans_proregular';}
 .item a:hover{text-decoration:none;}
 .item .logo-programa{width:193px;height:80px;margin:0 auto;}
