--- a/web/portal/css/tvcultura/sites/cedoc2.css
+++ b/web/portal/css/tvcultura/sites/cedoc2.css
@@ -201,3 +201,30 @@ h2 { text-transform:uppercase; font-size:18px; color:#666666; font-weight:normal
 .menu .search-query.input-medium { border-right: none; background:#fff url(/portal/images/capaPrograma/cedoc/lupa.jpg) no-repeat 2px; padding:0 0 0 20px; }
 #imagem-destacada { display: block; max-height: 438px; max-width: 980px; overflow: hidden;}
 .span6 .img-destaque { max-height:275px; overflow:hidden; }
+
+/******** RODAPE-PORTAL ********/
+#rodape-portal { margin-top:50px;clear:both; }
+.capa-voltar-topo {  width:970px; margin:0 auto; position:relative; z-index:10; margin-bottom:-15px; }
+.voltar-topo { display:block; overflow:hidden; width:96px; background:url(../images/bg-voltar-topo.jpg) repeat-x; height:36px; padding:4px 0 0 4px; font-size:10px; color:#fff; line-height:16px; }
+.voltar-topo span { background:url(../images/voltar-topo.png) no-repeat; width:16px; height:16px; display:block; float:left; }
+.voltar-topo:hover { text-decoration:none; }
+.capa-rodape {  background:#333; border-top:2px solid #d3d3d3; height:470px; }
+#rodape-portal .box-rodape { width:1054px; padding-left:50px; margin:0 auto; height:470px; background:#333; position:relative;  }
+#rodape-portal .box-rodape ul { margin-bottom:25px; }
+#rodape-portal .box-rodape li { text-align:left;  line-height:18px; }
+#rodape-portal .box-rodape .tit { font-weight:bold;font-size: 12px; color:#fff; font-family:Arial, Helvetica, sans-serif; }
+#rodape-portal .box-rodape li a { font-size:11px; color:#fff; }
+#rodape-portal .col-esq { width:200px; float:left; margin-left:20px; margin-top:20px; }
+#rodape-portal .col-central { width:610px; float:left; margin-top:20px; }
+#rodape-portal .col-central p { margin-bottom:5px; color:#fff }
+#rodape-portal .col-central .todos { width:200px; float:left; text-align:left; margin-bottom:20px; }
+#rodape-portal .col-central ul { width:200px; float:left; }
+#rodape-portal .col-dir { width:120px; float:left; margin-top:20px; }
+#rodape-portal .col-dir a { text-indent:-9999px; display:block; }
+#rodape-portal .col-dir .fpa {  background:url(../images/logo-fpa.png) no-repeat; width:105px; height:63px; margin-bottom:30px; }
+#rodape-portal .col-dir .cultura {  background:url(../images/logo-cultura.png) no-repeat; width:61px ; height:61px; margin-left:17px; }
+/*fxdfdsfd*/
+#rodape-portal .copyright {  margin:50px 0 20px 0; margin:0 auto; clear:both;position:absolute; right:400px; bottom:10px; }
+#rodape-portal .copyright p { font-size:10px; text-align:center; color:#fff !important; width:250px; margin:0 auto;  }
+#rodape-portal .posicao { width:200px; float:left; text-align:left; }
+/******** /RODAPE-PORTAL *********/
