--- a/web/portal/css/tvcultura/sites/cedoc2.css
+++ b/web/portal/css/tvcultura/sites/cedoc2.css
@@ -212,7 +212,7 @@ h2 { text-transform:uppercase; font-size:18px; color:#666666; font-weight:normal
 #rodape-portal .box-rodape { width:1054px; padding-left:50px; margin:0 auto; height:470px; background:#333; position:relative;  }
 #rodape-portal .box-rodape ul { margin-bottom:25px; }
 #rodape-portal .box-rodape li { text-align:left;  line-height:18px; }
-#rodape-portal .box-rodape .tit { font-weight:bold;font-size: 12px; color:#fff; font-family:Arial, Helvetica, sans-serif; }
+#rodape-portal .box-rodape .tit { font-weight:bold;font-size: 12px; color:#fff; font-family:Arial, Helvetica, sans-serif; list-style:none; }
 #rodape-portal .box-rodape li a { font-size:11px; color:#fff; }
 #rodape-portal .col-esq { width:200px; float:left; margin-left:20px; margin-top:20px; }
 #rodape-portal .col-central { width:610px; float:left; margin-top:20px; }
