--- a/web/portal/css/tvcultura/sites/cedoc2.css
+++ b/web/portal/css/tvcultura/sites/cedoc2.css
@@ -205,7 +205,8 @@ h2 { text-transform:uppercase; font-size:18px; color:#666666; font-weight:normal
 /******** RODAPE-PORTAL ********/
 #rodape-portal { margin-top:50px;clear:both; }
 .capa-voltar-topo {  width:970px; margin:0 auto; position:relative; z-index:10; margin-bottom:-15px; }
-.voltar-topo { display:block; overflow:hidden; width:96px; background:url(/portal/images/bg-voltar-topo.jpg) repeat-x; height:36px; padding:4px 0 0 4px; font-size:10px; color:#fff; line-height:16px; }
+.voltar-topo { display:block; overflow:hidden; width:96px; background:url(/portal/images/bg-voltar-topo.jpg) repeat-x; height:36px; padding:4px 0 0 10px; font-size:10px; color:#fff; line-height:16px; text-indent: 7px;}
+.voltar-topo:hover {color:#FFFFFF; text-decoration:none;}
 .voltar-topo span { background:url(/portal/images/voltar-topo.png) no-repeat; width:16px; height:16px; display:block; float:left; }
 .voltar-topo:hover { text-decoration:none; }
 .capa-rodape {  background:#333; border-top:2px solid #d3d3d3; height:470px; }
