--- a/web/portal/css/tvcultura/sites/qss.css
+++ b/web/portal/css/tvcultura/sites/qss.css
@@ -10,10 +10,10 @@
 
 }
 body {background: black;}
-#capa-site{min-height: 522px;*margin-top: -50px !important}
+#capa-site{height: 100%;*margin-top: -50px !important}
 #rodape-portal {margin-top: -28px;*z-index:1000;*margin-top:23px !important;}
 .voltar-topo{*margin-left:-350px !important;}
-#capa-site{position:relative;overflow: visible; min-height:833px;}
+#capa-site{position:relative;overflow: visible; height:100%;}
 #capa-site .logo{position: absolute;top: 70px;left:0px;}
 #capa-site .logo{*position: absolute;*top: 62px; *left:0px;}
 #capa-site .redes {position: relative;bottom: 40px;left: 97px;}
